src/parser/test/parser-tests-gen/data/good/good-39.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str"
      }
    properties:
      type1_str_1:
        type: string
      type1_bool_1:
        type: boolean
  Type2:
    type: Seed2
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_str_1": "str"
      }
    properties:
      type2_str_1:
        type: string
      type2_num_1:
        type: number
  Type3:
    type: [Type2,Type1]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_str_1": "str",
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str",
        "type3_num_2": 1,
        "type3_num_1": 1
      }
    properties:
      type3_num_1:
        type: number
      type3_num_2:
        type: number
  Type4:
    type: [Type3]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_str_1": "str",
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str",
        "type3_num_2": 1,
        "type3_num_1": 1,
        "type4_prop_1": {},
        "type4_bool_1": true
      }
    properties:
      type4_bool_1:
        type: boolean
      type4_prop_1:
        type: object
  Type5:
    type: object|Type2
    example: {}
  Type6:
    type: [Type4]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_str_1": "str",
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str",
        "type3_num_2": 1,
        "type3_num_1": 1,
        "type4_prop_1": {},
        "type4_bool_1": true,
        "type6_prop_1": {},
        "type6_bool_1": true
      }
    properties:
      type6_bool_1:
        type: boolean
      type6_prop_1:
        type: object
  Type7:
    type: Type3|object
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_str_1": "str",
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str",
        "type3_num_2": 1,
        "type3_num_1": 1
      }
  Type8:
    type: Type5|Seed2
    example: {}
  Type9:
    type: object|Type1
    example: {}
  Type10:
    type: Type1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_bool_1": true,
        "type1_str_1": "str",
        "type10_num_1": 1,
        "type10_prop_1": "str"
      }
    properties:
      type10_prop_1:
        type: string|(((Type7)))
      type10_num_1:
        type: number

/res1:
  post:
    body:
      application/json:
        type: [Type5,Type8]
        example: {}
/res2:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res3:
  post:
    body:
      application/json:
        type: [Type10]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "type1_str_1": "str",
            "type1_bool_1": true,
            "type10_prop_1": "str",
            "type10_num_1": 1
          }
/res4:
  post:
    body:
      application/json:
        type: [Type1]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "type1_str_1": "str",
            "type1_bool_1": true
          }
/res5:
  post:
    body:
      application/json:
        type: [Seed1]
        example: |
          {
            "str1": "str",
            "num1": 1
          }
