src/parser/test/parser-tests-gen/data/bad/bad-34.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type1_prop_1": {},
        "type1_bool_1": true
      }
    properties:
      type1_bool_1:
        type: boolean
      type1_prop_1:
        type: object
  Type2:
    type: object|object
    example: {}
  Type3:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type3_prop_1": "str",
        "type3_num_1": 1
      }
    properties:
      type3_num_1:
        type: number
      type3_prop_1:
        type: Type1
  Type4:
    type: object|object
    example: {}
  Type5:
    type: object|object
    example: {}
  Type6:
    type: object
    example: |
      {
        "type6_prop_2": {},
        "type6_prop_1": 1
      }
    properties:
      type6_prop_1:
        type: number|boolean
      type6_prop_2:
        type: (boolean|((boolean)|Type4))|string
  Type7:
    type: Type5
    example: {}
  Type8:
    type: object|Seed3
    example: {}
  Type9:
    type: [Type2,Type8]
    example: {}
  Type10:
    type: [Type3]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type3_prop_1": "str",
        "type3_num_1": 1,
        "type10_num_1": 1,
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_num_1:
        type: number

/res1:
  post:
    body:
      application/json:
        type: [Type6]
        example: |
          {
            "type6_prop_1": 1,
            "type6_prop_2": {}
          }
/res2:
  post:
    body:
      application/json:
        type: object
        example: {}
/res3:
  post:
    body:
      application/json:
        type: object
        example: {}
/res4:
  post:
    body:
      application/json:
        type: [Type8,Type7]
        example: {}
/res5:
  post:
    body:
      application/json:
        type: Seed2|object
        example: |
          {
            "str2": "str",
            "num2": 1
          }
